--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "dependencies": {
     "@angular/fire": "^17.0.1",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
-    "firebase-admin": "^12.0.0",
+    "firebase-admin": "^12.1.0",
+    "firebase-functions": "^4.9.0",
     "fireorm": "^0.23.3",
     "nodemon": "^3.1.0",
     "reflect-metadata": "^0.1.13",
