--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^4.9.0",
     "fireorm": "^0.23.3",
+    "firestore-export-import": "^1.2.1",
     "nodemon": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
