--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "main": "dist/main.js",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -17,7 +18,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "deploy": "firebase deploy --only functions",
+    "serve": "npm run build && firebase emulators:start --only functions",
+    "logs": "firebase functions:log"
+  },
+  "engines": {
+    "node": "20"
   },
   "dependencies": {
     "@angular/fire": "^17.0.1",
@@ -29,10 +36,13 @@
     "firebase": "^10.8.0",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^4.9.0",
+    "firebase-tools": "^13.9.0",
     "fireorm": "^0.23.3",
     "firestore-export-import": "^1.2.1",
+    "minimatch": "^9.0.4",
     "nodemon": "^3.1.0",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^5.0.7",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
@@ -40,10 +50,6 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
