--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
